force-app/main/default/objects/Partner_Margin__c/Partner_Margin__c.object-meta.xml
<CustomObject>
    <label>Partner Margin</label>
    <nameField>
        <label>Partner Margin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Margins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>