force-app/main/default/objects/Partner_Margin__c/fields/Amount_Check__c.field-meta.xml
<CustomField>
    <fullName>Amount_Check__c</fullName>
    <formula>IF  (Invoice_Subtotal__c = 0, &quot;&quot;, IF ( Invoice_Subtotal__c =  Enhancement_Attributable_Amount__c , &quot;Match&quot; , IF ( Invoice_Subtotal__c =   Software_Attributable_Amount_total__c , &quot;Match&quot; , IF ( Invoice_Subtotal__c =  ( Software_Attributable_Amount_total__c + Enhancement_Attributable_Amount__c ), &quot;Match&quot; ,&quot;MISMATCH&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Check</label>
    <type>Text</type>
</CustomField>