force-app/main/default/objects/Partner_Margin__c/fields/Approved_for_AP_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_for_AP_Date__c</fullName>
    <label>Approved for AP Date</label>
    <type>Date</type>
</CustomField>