force-app/main/default/objects/Partner_Margin__c/fields/CB_Credit_Status__c.field-meta.xml
<CustomField>
    <fullName>CB_Credit_Status__c</fullName>
    <formula>CB_Credit_Note__r.chargebeeapps__Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB Credit Status</label>
    <type>Text</type>
</CustomField>