force-app/main/default/objects/Partner_Margin__c/fields/CB_Credit_Total__c.field-meta.xml
<CustomField>
    <fullName>CB_Credit_Total__c</fullName>
    <formula>CB_Credit_Note__r.chargebeeapps__Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CB Credit Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>