force-app/main/default/objects/Partner_Margin__c/fields/CB_Invoice__c.field-meta.xml
<CustomField>
    <fullName>CB_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>chargebeeapps__CB_Invoice__c</referenceTo>
    <relationshipLabel>Partner Margins</relationshipLabel>
    <relationshipName>Partner_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>