force-app/main/default/objects/Partner_Margin__c/fields/CB_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Subscription_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CB Subscription ID</label>
    <referenceTo>chargebeeapps__CB_Subscription__c</referenceTo>
    <relationshipLabel>Partner Margins</relationshipLabel>
    <relationshipName>Partner_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>