force-app/main/default/objects/Partner_Margin__c/fields/Check__c.field-meta.xml
<CustomField>
    <fullName>Check__c</fullName>
    <label>Check #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>