force-app/main/default/objects/Partner_Margin__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Margins</relationshipLabel>
    <relationshipName>Partner_Margins</relationshipName>
    <type>Lookup</type>
</CustomField>