force-app/main/default/objects/Partner_Margin__c/fields/Enhancement_Attributable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Attributable_Amount__c</fullName>
    <label>Enhancement - Attributable Amount</label>
    <summarizedField>Partner_Margin_Product__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Partner_Margin_Product__c.Licensing__c</field>
        <operation>equals</operation>
        <value>Perpetual</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Partner_Margin_Product__c.ARR_Opp_Product_Original__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Margin_Product__c.Partner_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>