force-app/main/default/objects/Partner_Margin__c/fields/Enhancement_Attributable_ARR__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Attributable_ARR__c</fullName>
    <label>Enhancement - Attributable ARR</label>
    <summarizedField>Partner_Margin_Product__c.ARR_Product__c</summarizedField>
    <summaryFilterItems>
        <field>Partner_Margin_Product__c.Licensing__c</field>
        <operation>equals</operation>
        <value>Perpetual</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Margin_Product__c.Partner_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>