force-app/main/default/objects/Partner_Margin__c/fields/Enhancement_Partner_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Partner_Margin_Amount__c</fullName>
    <formula>IF (Enhancement_Partner_Margin_Renewal__c = 0, Enhancement_Attributable_Amount__c *Enhancement_Partner_Margin_Y1__c,

Enhancement_Attributable_Amount__c * IF( ISPICKVAL(Partner_Margin_Type__c , &apos;Initial Purchase&apos;) ,Enhancement_Partner_Margin_Y1__c , IF(ISPICKVAL(Partner_Margin_Type__c , &apos;Renewal&apos;),  Enhancement_Partner_Margin_Renewal__c ,0.00 )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enhancement - Partner Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>