force-app/main/default/objects/Partner_Margin__c/fields/Enhancement_Partner_Margin_Y1__c.field-meta.xml
<CustomField>
    <fullName>Enhancement_Partner_Margin_Y1__c</fullName>
    <defaultValue>0.15</defaultValue>
    <label>Enhancement - Partner Margin % (Y1)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>