force-app/main/default/objects/Partner_Margin__c/fields/Invoice_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Status__c</fullName>
    <formula>TEXT(CB_Invoice__r.chargebeeapps__Status__c)</formula>
    <label>Invoice Status</label>
    <type>Text</type>
</CustomField>