force-app/main/default/objects/Partner_Margin__c/fields/Invoice_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Subtotal__c</fullName>
    <formula>CB_Invoice__r.chargebeeapps__SubTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>