force-app/main/default/objects/Partner_Margin__c/fields/Opportunity_Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Won_Date__c</fullName>
    <formula>IF( AND(ISPICKVAL( Opportunity__r.StageName , &apos;Closed Won&apos;),NOT(ISNULL(Opportunity__r.CloseDate))),   Opportunity__r.CloseDate, null)</formula>
    <label>Opportunity Closed Won Date</label>
    <type>Date</type>
</CustomField>