force-app/main/default/objects/Partner_Margin__c/fields/Partial_Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>Partial_Partner_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partial Partner Margin</label>
    <type>Checkbox</type>
</CustomField>