force-app/main/default/objects/Partner_Margin__c/fields/Partner_Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Billing_Type__c</fullName>
    <label>Partner Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bill through Partner</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>