force-app/main/default/objects/Partner_Margin__c/fields/Partner_Client_Margin_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Partner_Client_Margin_Eligibility__c</fullName>
    <label>Partner-Client Margin Eligibility</label>
    <length>100</length>
    <type>Text</type>
</CustomField>