force-app/main/default/objects/Partner_Margin__c/fields/Partner_Margin_Duration__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Duration__c</fullName>
    <label>Partner Margin Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-time</fullName>
            </value>
            <value>
                <fullName>On-going</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>