force-app/main/default/objects/Partner_Margin__c/fields/Partner_Margin_Number__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Number__c</fullName>
    <displayFormat>PM-{0000}</displayFormat>
    <label>Partner Margin ID</label>
    <type>AutoNumber</type>
</CustomField>