force-app/main/default/objects/Partner_Margin__c/fields/Partner_Margin_Status__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Status__c</fullName>
    <defaultValue>&apos;Pipeline&apos;</defaultValue>
    <label>Partner Margin Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Billed through Partner</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Historical</fullName>
            </value>
            <value>
                <fullName>Approved for AP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>