force-app/main/default/objects/Partner_Margin__c/fields/Partner_Margin_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Margin_Type__c</fullName>
    <label>Partner Margin Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Purchase</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>