force-app/main/default/objects/Partner_Margin__c/fields/PM_Identifier__c.field-meta.xml
<CustomField>
    <fullName>PM_Identifier__c</fullName>
    <externalId>true</externalId>
    <label>PM Identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>