force-app/main/default/objects/Partner_Margin__c/fields/Software_Attributable_Amount_2__c.field-meta.xml
<CustomField>
    <fullName>Software_Attributable_Amount_2__c</fullName>
    <label>Software - Attributable Amount 2_ARCHIVE</label>
    <summarizedField>Partner_Margin_Product__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Partner_Margin_Product__c.Perpetual_Type__c</field>
        <operation>equals</operation>
        <value>License</value>
    </summaryFilterItems>
    <summaryForeignKey>Partner_Margin_Product__c.Partner_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>