force-app/main/default/objects/Partner_Margin__c/fields/Software_Attributable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Software_Attributable_Amount__c</fullName>
    <label>Attributable Amount (ALL)</label>
    <summarizedField>Partner_Margin_Product__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Partner_Margin_Product__c.Partner_Margin__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>