force-app/main/default/objects/Partner_Margin__c/fields/Software_Attributable_Amount_total__c.field-meta.xml
<CustomField>
    <fullName>Software_Attributable_Amount_total__c</fullName>
    <formula>Software_Attributable_Amount__c -  Enhancement_Attributable_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software - Attributable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>