force-app/main/default/objects/Partner_Margin__c/fields/Software_Partner_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>Software_Partner_Margin_Amount__c</fullName>
    <formula>IF(Software_Partner_Margin_Renewal__c = 0 ,(Software_Attributable_Amount_total__c   * Software_Partner_Margin_Y1__c),

Software_Attributable_Amount_total__c   *  IF( ISPICKVAL(Partner_Margin_Type__c , &apos;Initial Purchase&apos;)  ,  Software_Partner_Margin_Y1__c ,  IF(ISPICKVAL(Partner_Margin_Type__c , &apos;Renewal&apos;), Software_Partner_Margin_Renewal__c,0.00  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software - Partner Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>