force-app/main/default/objects/Partner_Margin__c/fields/Software_Partner_Margin_Renewal__c.field-meta.xml
<CustomField>
    <fullName>Software_Partner_Margin_Renewal__c</fullName>
    <label>Software - Partner Margin % (Renewal)</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>