force-app/main/default/objects/Partner_Margin__c/fields/Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Status__c</fullName>
    <formula>TEXT(CB_Subscription_ID__r.chargebeeapps__Subscription_status__c)</formula>
    <label>Subscription Status</label>
    <type>Text</type>
</CustomField>